Renamed HMQ to MQTT

--- a/config.yaml
+++ b/config.yaml
@@ -65,11 +65,11 @@ write_files:
       apiVersion: v1
       kind: Service
       metadata:
-        name: hmq
+        name: mqtt
         namespace: kube-system
       spec:
         selector:
-          app: hmq
+          app: mqtt
         ports:
           - protocol: TCP
             port: 1883
@@ -78,21 +78,21 @@ write_files:
       apiVersion: apps/v1
       kind: Deployment
       metadata:
-        name: hmq
+        name: mqtt
         namespace: kube-system
       spec:
         replicas: 1
         selector:
           matchLabels:
-            app: hmq
+            app: mqtt
         template:
           metadata:
             labels:
-              app: hmq
+              app: mqtt
           spec:
             containers:
-              - name: toe
-                image: tekn0ir/hmq:latest
+              - name: mqtt
+                image: eclipse-mosquitto:latest
                 imagePullPolicy: Always
                 ports:
                   - containerPort: 1883
